# ggj-26

./: .gitignore  README.md  pyproject.toml  story.md
src/ggj/: background.py  camera.py  collision.py  game_object.py  keys.py  main.py  player.py  telegraph.py  world.py
src/ggj/assets/: __init__.py  start.pdn
src/ggj/map/: importer.py  map.md  test_importer.py  world.xcf
src/ggj/ui/: __init__.py  message_box.py
