[project]
name = "ggj"
version = "0.1.0"
dependencies = [
    "pygame",
    "mypy",
    "pillow",
    "numpy"
]
scripts = { ggj = "ggj.main:main" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.mp3"]

[tool.mypy]
check_untyped_defs = true